fix the annoucing CO for safari mobile + fixed the font for red card on mobile + paused extra 0.5 before introAnim slide up

--- a/scss/components/login/preLoginContent.scss
+++ b/scss/components/login/preLoginContent.scss
@@ -322,6 +322,10 @@
             position: absolute;
             font-weight: 700;
             line-height: 48px;
+
+            @include media("<tablet") {
+              font-size: 48px;
+            }
           }
 
           .real-madrid {
@@ -506,15 +510,24 @@
 
       @include media("<tablet") {
         z-index: 1;
-        justify-content: space-between;
+        justify-content: start;
+        width: 100%;
 
         .CO-logo {
           max-height: clamp(60px, 12vw, 100px);
-          align-self: flex-end;
+          display: flex;
+          justify-content: flex-end;
+          // width: 100%;
+
+          img {
+            width: auto;
+          }
         }
 
         p {
-          order: 1;
+          position: absolute;
+          bottom: 28px;
+          left: 24px;
         }
       }
     }
@@ -526,7 +539,7 @@
       align-items: center;
 
       @include media("<tablet") {
-        max-height: 80%;
+        max-height: 100%;
         max-width: none;
 
         height: 100%;
@@ -536,6 +549,7 @@
         align-self: center;
 
         img {
+          object-fit: contain;
           max-height: 100%;
         }
       }
